feat: compatibility fixes with ARLAS server 24.0.0